--- a/WebApplication1/ClientApp/package.json
+++ b/WebApplication1/ClientApp/package.json
@@ -26,10 +26,14 @@
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "angular-bootstrap-md": "^5.2.3",
+    "angular4-carousel": "^3.1.8",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ngx-owl-carousel": "^2.0.7",
     "rxjs": "^5.5.2",
+    "script-loader": "^0.7.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
