--- a/WebApplication1/GeoApp.csproj
+++ b/WebApplication1/GeoApp.csproj
@@ -39,6 +39,8 @@
     <None Remove="ClientApp\src\app\fetch-data\fetch-data.component.ts" />
     <None Remove="ClientApp\src\app\home\home.component.ts" />
     <None Remove="ClientApp\src\app\nav-menu\nav-menu.component.ts" />
+    <None Remove="ClientApp\src\app\svg-icon\svg-icon.component.spec.ts" />
+    <None Remove="ClientApp\src\app\svg-icon\svg-icon.component.ts" />
     <None Remove="ClientApp\src\environments\environment.prod.ts" />
     <None Remove="ClientApp\src\environments\environment.ts" />
     <None Remove="ClientApp\src\main.ts" />
@@ -62,6 +64,8 @@
     <TypeScriptCompile Include="ClientApp\src\app\fetch-data\fetch-data.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\home\home.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\nav-menu\nav-menu.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\svg-icon\svg-icon.component.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\svg-icon\svg-icon.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\environments\environment.prod.ts" />
     <TypeScriptCompile Include="ClientApp\src\environments\environment.ts" />
     <TypeScriptCompile Include="ClientApp\src\main.ts" />
