--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -13,49 +13,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/platform-server": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
-    "@ngx-gallery/core": "^2.0.3",
-    "angular-bootstrap-md": "^5.2.3",
-    "angular4-carousel": "^3.1.8",
-    "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "ngx-owl-carousel": "^2.0.7",
-    "rxjs": "^5.5.2",
-    "script-loader": "^0.7.2",
-    "zone.js": "^0.8.14"
+    "@angular/animations": "5.0.0",
+    "@angular/cdk": "5.2.4",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/material": "5.2.4",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/platform-server": "5.0.0",
+    "@angular/router": "5.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "5.0.0-beta.5",
+    "@ngx-gallery/core": "2.0.3",
+    "angular-bootstrap-md": "5.2.3",
+    "angular4-carousel": "3.1.8",
+    "aspnet-prerendering": "3.0.1",
+    "bootstrap": "3.3.7",
+    "core-js": "2.4.1",
+    "ngx-owl-carousel": "2.0.7",
+    "rxjs": "5.5.2",
+    "script-loader": "0.7.2",
+    "zone.js": "0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/language-service": "5.0.0",
+    "@types/jasmine": "2.5.53",
+    "@types/jasminewd2": "2.0.2",
+    "@types/node": "6.0.60",
+    "codelyzer": "4.0.1",
+    "jasmine-core": "2.6.2",
+    "jasmine-spec-reporter": "4.1.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "protractor": "5.1.2",
+    "ts-node": "3.2.0",
+    "tslint": "5.7.0",
+    "typescript": "2.4.2"
   }
 }
