--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "5.0.0",
     "@nguniversal/module-map-ngfactory-loader": "5.0.0-beta.5",
     "@ngx-gallery/core": "2.0.3",
+    "@ngx-gallery/lightbox": "2.0.3",
     "angular4-carousel": "3.1.8",
     "aspnet-prerendering": "3.0.1",
     "core-js": "2.4.1",
