--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -31,6 +31,7 @@
     "angular4-carousel": "3.1.8",
     "aspnet-prerendering": "3.0.1",
     "core-js": "2.4.1",
+    "ng-simple-slideshow": "1.2.5",
     "ngx-owl-carousel": "2.0.7",
     "rxjs": "5.5.2",
     "script-loader": "0.7.2",
