--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -13,38 +13,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.0.0",
-    "@angular/cdk": "5.2.4",
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/material": "5.2.4",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/platform-server": "5.0.0",
-    "@angular/router": "5.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "5.0.0-beta.5",
-    "@ngx-gallery/core": "2.0.3",
-    "@ngx-gallery/lightbox": "2.0.3",
+    "@angular/animations": "7.0.0",
+    "@angular/cdk": "7.0.1",
+    "@angular/common": "7.0.0",
+    "@angular/compiler": "7.0.0",
+    "@angular/core": "7.0.0",
+    "@angular/forms": "7.0.0",
+    "@angular/http": "7.0.0",
+    "@angular/material": "7.0.1",
+    "@angular/platform-browser": "7.0.0",
+    "@angular/platform-browser-dynamic": "7.0.0",
+    "@angular/platform-server": "7.0.0",
+    "@angular/router": "7.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "7.0.2",
+    "@ngx-gallery/core": "3.3.1",
+    "@ngx-gallery/lightbox": "3.3.1",
     "angular4-carousel": "3.1.8",
     "aspnet-prerendering": "3.0.1",
     "core-js": "2.4.1",
     "ng-simple-slideshow": "1.2.5",
-    "ngx-owl-carousel": "2.0.7",
-    "rxjs": "5.5.2",
+    "rxjs": "6.3.3",
     "script-loader": "0.7.2",
     "zone.js": "0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/language-service": "5.0.0",
-    "@types/node": "6.0.60",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "7.0.2",
+    "@angular/compiler-cli": "7.0.0",
+    "@angular/language-service": "7.0.0",
+    "@types/node": "10.12.0",
     "codelyzer": "4.0.1",
     "ts-node": "3.2.0",
     "tslint": "5.7.0",
-    "typescript": "2.4.2"
+    "typescript": "3.1.3"
   }
 }
