adding projectItem to rule all single projects

--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -26,12 +26,12 @@
     "@angular/platform-server": "7.0.0",
     "@angular/router": "7.0.0",
     "@nguniversal/module-map-ngfactory-loader": "7.0.2",
-    "@ngx-gallery/core": "3.3.1",
-    "@ngx-gallery/lightbox": "3.3.1",
     "angular4-carousel": "3.1.8",
     "aspnet-prerendering": "3.0.1",
     "core-js": "2.4.1",
+    "font-awesome": "4.7.0",
     "ng-simple-slideshow": "1.2.5",
+    "ngx-gallery": "5.7.0",
     "rxjs": "6.3.3",
     "script-loader": "0.7.2",
     "zone.js": "0.8.14"
