--- a/GeoApp/ClientApp/package.json
+++ b/GeoApp/ClientApp/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --extract-css --port 4200",
+    "start": "ng serve --port 4200",
     "build": "ng build --extract-css",
     "build:ssr": "npm run build -- --app=ssr --output-hashing=media",
     "test": "ng test",
